Add compile option